src/navbar.css
.navbar {
    width: 310px;
    height: 100vh; /* fills 100% of height */
    position: fixed;
    background-color: black;
    border-right: 1px solid rgb(32, 32, 32);
    padding-left: 0.7rem;
    padding-right: 1rem;
    
}

.navbar-nav {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: left;
    height: 100%;
}

.nav-logo {
    padding: 40px 50px 40px 20px;
    font-family: 'Poiret One';
    font-size: 25px;
    user-select: none;
    pointer-events: auto;
}

.logo-text {
    color: inherit;
    text-decoration: none;
    user-select: none;
}

.nav-list {
    padding: 5px 0px;
}

.nav-item{
    display: flex;
    padding: 0px 25px 0px 15px;
    font-family: Arial;
    transition: background-color 0.2s ease;
    border-radius: 7px;
}

.nav-space {
    height: 40%;
}

.nav-item:hover {
    background-color: #1A1A1A;
    
}

.navicon {
    fill: white;
    transform: scale(0.6);
    transform-origin: left; 
    display: flex;
    align-items: center;
    justify-content: center;
}

.nav-item:hover > .navicon{
    transform: scale(0.62);
}

.navtext {
    display: flex;
    align-items: center;
    justify-content: center;
    line-height: 2;
}

